tests/ui/const-generics/issues/issue-88997.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-88997.rs:8:40
   |
LL | struct Range<T: PartialOrd, const MIN: T, const MAX: T>(T)
   |                                        ^ the type must not depend on the parameter `T`
   |
   = note: type parameters may not be used in the type of const parameters

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-88997.rs:8:54
   |
LL | struct Range<T: PartialOrd, const MIN: T, const MAX: T>(T)
   |                                                      ^ the type must not depend on the parameter `T`
   |
   = note: type parameters may not be used in the type of const parameters

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0770`.
